<resources>
    <string name="app_name">AppMovies</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="btn_register">Sign Up</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="text_log_in">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="btn_log_in">Log In</string>
    <string name="user_login_button">User login</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_search">Search</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_favorites">Favorites</string>
    <string name="back_btn">Back Button</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="description_text">Enter your e-mail address we will \n send you a email to reset your password</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_login">Proceed to Login</string>
    <string name="email_verified">Email Verified</string>
    <string name="recovery_sent_text">Recovery link was sent successfully. check you email</string>
</resources>