<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_menu_home" />


    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_menu_search" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_default"
        android:title="@string/bottom_menu_favorites" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_menu_profile" />
</menu>